# mbolt

./: .gitignore  README.md  blog.html  mbolt-build-prompt.md
colibri119/: export.py  glm_overlay.py
mbolt/: .gitignore  README.md  pyproject.toml
mbolt/patches/: llama.cpp-mbolt-trace.patch
mbolt/scripts/: byte_verify.py  capture_traces.py  ci_correctness.sh  coldstart_bench.py  correctness_proof.py  cross_domain.py  e2e_bench.py  e2e_bench2.py  final_chart.py  gate_chart.py  goal_bench.py  goal_bench500.py  goal_chart.py  goal_judge.py  goal_judge500.py  goal_regen_nothink.py  ilv_e2e_bench.py  ilv_replay_fair.py  launch_chart.py  make_prompts.py  pagein_probe.py  prefetch_bench.py  qd_bench.py  routing_equiv.py  run_gate.sh  run_qwen80_pipeline.sh
mbolt/src/mbolt/: cli.py  cluster.py  gguf_map.py  layouts.py  replay.py  rewrite.py  sim_cli.py  trace.py
results/: correctness.json  decisions.md  final-report.md  gate_cold.json  gate_warm16.json  gate_warm32.json  gate_warm64.json  perms.json  perms_partial.json  phase0-gate.md  phase1-report.md  phase2-report.md  verification_corrections.json
results/colibri-119/: coactivation_glm52_overlay.json  coactivation_qwen3-30b-a3b.json  coactivation_qwen3-next-80b-a3b.json  readahead_efficiency.json
results/goal/: diverged_idx.json  gate_cold_fresh.json  gen500_mbolt.jsonl  gen500_orig.jsonl  judge.json  judge500.json  judge_nothink.json  metrics_ngl99.json  metrics_nothink.json  report.md
results/outreach/: colibri-issue-draft.md  colibri-reply-2.md  llamacpp-discussion-draft.md  mlx-issue-draft.md
traces/: ilv.pfmap  kl_text.txt  orig.pfmap  prompts.jsonl  prompts500.jsonl
(+5 files in other folders)
