[project]
name = "mbolt"
version = "0.1.0"
description = "Profile-guided layout optimization for GGUF models (BOLT/PGO for LLM weights)"
requires-python = ">=3.11"
dependencies = ["gguf>=0.10", "numpy>=1.26", "networkx>=3.2"]

[project.scripts]
mbolt-sim = "mbolt.sim_cli:main"
mbolt = "mbolt.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mbolt"]
